--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "tailwindcss-animated": "^1.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
